--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<meta http-equiv="Refresh" content="0; url='install.sh'" />
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=https://get.voltmetrix.com/install.sh">
+        <script type="text/javascript">
+            window.location.href = "https://get.voltmetrix.com/install.sh"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='https://get.voltmetrix.com/install.sh'>link to example</a>.
+    </body>
+</html>
